--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,24 @@
-body{
-    background-color: bisque;
+.orange {
+    color: orange;
+}
+
+h1{
+    display: inline-block;
+    margin-right: 2rem;
+}
+
+#app{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    border: 3px solid orange;
+}
+
+.hover{
+    display: flex;
+    align-items: center;
+    cursor: pointer;
 }
